<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Police@SG</string>
    <string name="spf_crime_info">   Crime Info Map</string>
    <string name="spf_news_feed">     News Feed</string>
    <string name="spf_police_appeal">    Police Appeals</string>
    <string name="spf_mission_person">     Missing Persons</string>
    <string name="spf_police_stations">  Police Station Locator</string>
    <string name="spf_policevideos">    Police Videos</string>
    <string name="spf_more_links">    More Links</string>
    <string name="spf_useful_no">   Useful Numbers</string>
    <string name="spf_aboutsus">  Singapore Police Force</string>
    <string name="msg_goto_next">Do you wish to see report for this location ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="find_gps">Searching Gps Location ...</string>
    <string name="loading">Loading ...</string>
    <string name="no_connection">No internet connection available.</string>
    <string name="lbl_search">Please Enter Location</string>
    <string name="lbl_example">e.g.: \"Geylang Avenue\" or \"Jurong West St 42\"</string>
    <string name="btn_search">Search</string>
    <string name="error">Police</string>
    <string name="empty_location">Please enter location.</string>
    <string name="msg_location_less">Search term should be at least 4 characters long.</string>
    <string name="ok">OK</string>
    <string name="missing_location">Location Last Seen :</string>
    <string name="missing_date">Missing Date :</string>
    <string name="missing_name">Name:</string>
    <string name="missing_race">Race:</string>
    <string name="missing_nationality">Nationality:</string>
    <string name="missing_dob">Year of Birth:</string>
    <string name="missing_age">Age:</string>
    <string name="missing_age_male">Male</string>
    <string name="missing_age_female">Female</string>
    <string name="missing_gender">Gender:</string>
    <string name="missing_hair">Hair:</string>
    <string name="missing_height">Height:</string>
    <string name="missing_complexion">Complexion:</string>
    <string name="missing_last_date">Last Seen Date and Time:</string>
    <string name="missing_last_location">Last Seen Location:</string>
    <string name="missing_details">Details:</string>
    <string name="null_value">unknown</string>
    <string name="google_map">0TPHagn9DRynwq8S07d6yq0NOuPQgXD2pxAXbuA</string>
    <string name="process_loading">Loading....</string>
    <string name="location_request_code">location_request_code</string>
    <string name="contact_police_hotline">Police Information Hotline</string>
    <string name="contact_police_desc1">Respond to police appeals for information on criminal cases and missing persons.</string>
    <string name="contact_police_desc2">For general inquiries on Police services, you may contact a Neighbourhood Police Centre near you. Please use the NPC/NPP locator module in this App.</string>
    <string name="contact_police_hotline_no">1800-2550000</string>
    <string name="contact_police_traffic">Traffic Police Information Hotline</string>
    <string name="contact_police_traffic_desc">Respond to police appeals for information on traffic accidents</string>
    <string name="contact_police_traffic_no">6547-0000</string>
    <string name="contact_police_emergency">Police Emergency Hotline</string>
    <string name="contact_police_emergency_desc">Reporting of a crime in progress or a potential crime that might be committed.</string>
    <string name="contact_police_emergency_no">999</string>
    <string name="contact_police_civil">Singapore Civil Defence Force (SCDF)</string>
    <string name="contact_police_civil_desc1">For medical emergencies in life-threatening situations, such as when someone is seriously injured in an accident or suddenly collapses.</string>
    <string name="contact_police_civil_desc2">To report a situation in which fire-fighting and rescue services are required.</string>
    <string name="contact_police_civil_no">995</string>
    <string name="contact_police_non_emergency">Non-Emergency Ambulance Services</string>
    <string name="contact_police_non_emergency_desc">For medical non-emergency cases, which do NOT end in death or serious complication if not treated immediately.</string>
    <string name="contact_police_non_emergency_no">1777</string>
    <string name="contact_police_hdb">Housing Development Board (HDB)</string>
    <string name="contact_police_hdb_desc1">"- Corroded air-conditioner casings.
- Illegal parking within HDB car park areas.
- Nuisance caused by renovation works in HDB flats.
- Un-neighbourly behaviours."</string>
    <string name="contact_police_hdb_no">1800-2255432</string>
    <string name="contact_police_nea">National Environment Agency (NEA)</string>
    <string name="contact_police_nea_desc1">Noise pollution from construction sites, roads, road works and religious buildings.</string>
    <string name="contact_police_nea_desc2">Complaints of illegal hawking.</string>
    <string name="contact_police_nea_desc3">Hygiene in food establishments and food centres.</string>
    <string name="contact_police_nea_desc4">Health nuisance caused by air pollution, dust and smoke.</string>
    <string name="contact_police_nea_no">1800-2255632</string>
    <string name="contact_police_ava">Agri-Food &amp; Veterinary Authority (AVA)</string>
    <string name="contact_police_ava_desc">"- Complaints on stray animals.
- Complaints on unleashed or un-muzzled dogs.
- Reporting of animal cruelty cases.
- Loan of animal traps."</string>
    <string name="contact_police_ava_no">1800-4761600</string>
    <string name="contact_police_lta">Land Transport Authority (LTA)</string>
    <string name="contact_police_lta_desc1">Complaints of faulty traffic-lights.</string>
    <string name="contact_police_lta_desc2">Maintenance of overhead bridges, pedestrian footpaths and bus shelters.</string>
    <string name="contact_police_lta_desc3">Obstruction of Public roads by skip-bins, rubbish bins and other objects.</string>
    <string name="contact_police_lta_desc4">Illegal parking along public roads and footways.</string>
    <string name="contact_police_lta_no">1800-2255582</string>
    <string name="contact_police_cmc">Community Mediation Centre (CMC)</string>
    <string name="contact_police_cmc_desc">If you have a dispute with your family, friends or neighbours and a crime was not committed, you should contact a Community Mediation Centre (CMC) directly for assistance. CMCs were set up by the Ministry of Law to resolve social and relational conflicts amicably through mediation. Mediation is a flexible and informal process to isolate disputed issues, develop options and explore alternatives so as to ultimately reach a consensual settlement.</string>
    <string name="contact_police_cmu">Community Mediation Unit :</string>
    <string name="contact_police_cmc_central">CMC Central :</string>
    <string name="contact_police_cmc_sub">CMC Subordinate Courts :</string>
    <string name="contact_police_cmu_msg">6325-1600</string>
    <string name="contact_police_cmc_central_msg">6325-1600</string>
    <string name="contact_police_cmc_sub_msg">6536-9665</string>
    <string name="please_click">Please click on division to select</string>
    <string name="crime_news">Crime News</string>
    <string name="appeal">Appeals</string>
    <string name="disclaimer">Disclaimer: These are the latest, accurate crime statistics for the period specified.</string>
    <string name="twitter_final">Finalizing...</string>
    <string name="current_location">Current Location</string>
    <string name="read_more">Read More..</string>
    <string name="no_record_found">No search result found</string>
    <string name="record_found">Results found</string>
    <string name="color_code">\#CCCCCC</string>
    <string name="ga_app_launched">app_launched</string>
    <string name="ga_map">CrimeInfoMap</string>
    <string name="ga_news">NewsFeed</string>
    <string name="ga_appeal">PoliceAppeal</string>
    <string name="ga_missing">MissingPersons</string>
    <string name="ga_locator">PoliceStationLocator</string>
    <string name="ga_joinus">JoinUs</string>
    <string name="ga_contacts">UsefulNumbers</string>
    <string name="ga_videos">PoliceVideo</string>
    <string name="ga_links">MoreLinks</string>
    <string name="ga_map_news">CrimeInfoMap-CrimeNews</string>
    <string name="ga_map_news_fb">CrimeInfoMap-CrimeNews-Facebook</string>
    <string name="ga_map_news_twitter">CrimeInfoMap-CrimeNews-Twitter</string>
    <string name="ga_map_news_map">CrimeInfoMap-CrimeNews-Map</string>
    <string name="ga_map_appeals">CrimeInfoMap-Appeals</string>
    <string name="ga_map_appeals_fb">CrimeInfoMap-Appeals-Facebook</string>
    <string name="ga_map_appeals_twitter">CrimeInfoMap-Appeals-Twitter</string>
    <string name="ga_map_appeals_map">CrimeInfoMap-Appeals-Map</string>
    <string name="ga_map_missing">CrimeInfoMap-MissingPersons</string>
    <string name="ga_map_missing_fb">CrimeInfoMap-MissingPersons-Facebook</string>
    <string name="ga_map_missing_twitter">CrimeInfoMap-MissingPersons-Twitter</string>
    <string name="ga_map_missing_map">CrimeInfoMap-MissingPersons-Map</string>
    <string name="ga_news_bylocation">NewsFeed-ByLocation</string>
    <string name="ga_news_bytype">NewsFeed-ByType</string>
    <string name="ga_news_fb">NewsFeed-Facebook</string>
    <string name="ga_news_twitter">NewsFeed-Twitter</string>
    <string name="ga_news_map">NewsFeed-Map</string>
    <string name="ga_appeal_bylocation">PoliceAppeal-ByLocation</string>
    <string name="ga_appeal_bytype">PoliceAppeal-ByType</string>
    <string name="ga_appeal_fb">PoliceAppeal-Facebook</string>
    <string name="ga_appeal_twitter">PoliceAppeal-Twitter</string>
    <string name="ga_appeal_map">PoliceAppeal-Map</string>
    <string name="ga_missing_bylocation">MissingPersons-ByLocation</string>
    <string name="ga_missing_fb">MissingPersons-Facebook</string>
    <string name="ga_missing_twitter">MissingPersons-Twitter</string>
    <string name="ga_missing_map">MissingPersons-Map</string>
    <string name="ga_missing_id">MissingPersons-ID-</string>
    <string name="ga_locator_bylocation">PoliceStationLocator-ByLocation</string>
    <string name="ga_locator_map">PoliceStationLocator-Map</string>
    <string name="ga_videos_courage">PoliceVideo-Courage</string>
    <string name="ga_videos_fairness">PoliceVideo-Fairness</string>
    <string name="ga_videos_integrity">PoliceVideo-Integrity</string>
    <string name="ga_videos_loyalty">PoliceVideo-Loyalty</string>
    <string name="ga_videos_youTube">PoliceVideo-YouTube</string>
    <string name="ga_links_spfwebsite">MoreLinks-SPFWebsite</string>
    <string name="ga_links_fb">MoreLinks-Facebook</string>
    <string name="ga_links_twitter">MoreLinks-Twitter</string>
    <string name="ga_links_Handphone_tracing">MoreLinks-HandPhoneTracing</string>
</resources>
