<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/StandardRelativeLayout"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/title_logo" layout="@layout/spf_header" />
    <ImageView android:id="@id/imageView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/bottom_blue_line" android:scaleType="fitXY" android:layout_below="@id/title_logo" />
    <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/imageView1" android:layout_below="@id/imageView2">
        <TextView android:textSize="16.0dip" android:textStyle="bold" android:textColor="#ff012561" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_search" />
        <EditText android:id="@id/location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:lines="1" android:inputType="text" />
        <TextView android:textSize="12.0dip" android:textColor="#ff012561" android:id="@id/textView3" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_example" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textColor="#ffffffff" android:id="@id/button1" android:background="@drawable/distance_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/btn_search" android:onClick="onClick" />
        </LinearLayout>
    </LinearLayout>
    <ImageView android:id="@id/ImageView01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/bottom_blue_line" android:scaleType="fitXY" android:layout_alignParentBottom="true" />
</RelativeLayout>