<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/StandardRelativeLayout"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/title_logo" layout="@layout/spf_header" />
    <ImageView android:id="@id/imageView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/bottom_blue_line" android:scaleType="fitXY" android:layout_below="@id/title_logo" />
    <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/ImageView01" android:layout_below="@id/imageView2">
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout2" android:background="@drawable/layout_border" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/RelativeLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/missing_title" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" style="@style/Title" />
                <TableLayout android:id="@id/LinearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="2" android:layout_below="@id/missing_title">
                    <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
                        <ImageView android:layout_gravity="center" android:id="@id/images" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitStart" android:layout_weight="1.0" android:onClick="launchImage" />
                        <LinearLayout android:layout_gravity="right" android:orientation="vertical" android:id="@id/LinearLayoutShare" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                            <ImageView android:id="@id/twitter" android:padding="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/twitter" android:onClick="shareButton" />
                            <ImageView android:id="@id/facebook" android:padding="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/facebook" android:onClick="shareButton" />
                            <ImageView android:id="@id/mapDetail" android:padding="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/seeonmap" android:onClick="shareButton" />
                            <ImageView android:id="@id/mapDetail_Off" android:padding="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/seeonmap_off" />
                        </LinearLayout>
                    </TableRow>
                </TableLayout>
            </RelativeLayout>
            <ScrollView android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:id="@id/RelativeLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <LinearLayout android:id="@id/LinearLayout01" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:layout_width="130.0dip" android:layout_height="wrap_content" android:text="@string/missing_name" style="@style/Label" />
                        <TextView android:id="@id/name" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Label1" />
                    </LinearLayout>
                    <LinearLayout android:id="@id/LinearLayout05" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/LinearLayout01">
                        <TextView android:layout_width="130.0dip" android:layout_height="wrap_content" android:text="@string/missing_age" style="@style/Label" />
                        <TextView android:id="@id/age" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Label1" />
                    </LinearLayout>
                    <LinearLayout android:id="@id/LinearLayout06" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/LinearLayout05">
                        <TextView android:layout_width="130.0dip" android:layout_height="wrap_content" android:text="@string/missing_gender" style="@style/Label" />
                        <TextView android:id="@id/gender" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Label1" />
                    </LinearLayout>
                    <LinearLayout android:id="@id/LinearLayout07" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/LinearLayout06">
                        <TextView android:layout_width="130.0dip" android:layout_height="wrap_content" android:text="@string/missing_hair" style="@style/Label" />
                        <TextView android:id="@id/hair" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Label1" />
                    </LinearLayout>
                    <LinearLayout android:id="@id/LinearLayout08" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/LinearLayout07">
                        <TextView android:layout_width="130.0dip" android:layout_height="wrap_content" android:text="@string/missing_height" style="@style/Label" />
                        <TextView android:id="@id/height" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Label1" />
                    </LinearLayout>
                    <LinearLayout android:id="@id/LinearLayout09" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/LinearLayout08">
                        <TextView android:layout_width="130.0dip" android:layout_height="wrap_content" android:text="@string/missing_complexion" style="@style/Label" />
                        <TextView android:id="@id/complexion" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Label1" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout10" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/LinearLayout09">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/missing_last_date" style="@style/Label" />
                        <TextView android:id="@id/lastdate_time" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Label1" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout11" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/LinearLayout10">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/missing_last_location" style="@style/Label" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout12" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/LinearLayout11">
                        <TextView android:id="@id/last_location" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Label1" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout13" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/LinearLayout12">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/missing_details" style="@style/Label" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout14" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/LinearLayout13">
                        <TextView android:autoLink="phone" android:id="@id/details" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Label1" />
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
    <ImageView android:id="@id/ImageView01" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitXY" android:minHeight="50.0dip" android:layout_alignParentBottom="true" />
</RelativeLayout>