<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/layout_border" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:background="#ff15317e" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip">
            <RelativeLayout android:id="@id/relativeLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="3.0dip">
                <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:textSize="12.0dip" android:textColor="#ffffffff" android:id="@id/missing_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="1" />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout android:id="@id/TableRow1" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/crimeImg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:scaleType="fitXY" android:minWidth="60.0dip" android:minHeight="40.0dip" android:layout_alignTop="@id/layoutId" android:layout_alignBottom="@id/readmore" />
            <LinearLayout android:orientation="vertical" android:id="@id/layoutId" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/crimeImg">
                <TextView android:id="@id/name" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/Description" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:id="@id/location_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/missing_location" style="@style/Description" />
                    <TextView android:id="@id/location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0sp" style="@style/Description1" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:layout_width="125.0dip" android:layout_height="wrap_content" android:text="@string/missing_date" android:layout_alignParentLeft="true" style="@style/Description" />
                    <TextView android:id="@id/missing_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="@style/Description1" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:textSize="10.0sp" android:textColor="#ffff0000" android:id="@id/readmore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/read_more" android:layout_below="@id/layoutId" android:layout_alignParentRight="true" style="@style/ReadMore" />
        </RelativeLayout>
        <LinearLayout android:gravity="right|center" android:layout_gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" />
    </LinearLayout>
</LinearLayout>